force-app/main/default/objects/Sym_Census__c/fields/Sym_Account__c.field-meta.xml
<CustomField>
    <fullName>Sym_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Census</relationshipLabel>
    <relationshipName>Census</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>