force-app/main/default/objects/Sym_Census__c/fields/Sym_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Sym_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>