force-app/main/default/objects/Sym_Census__c/fields/Sym_Employee_active__c.field-meta.xml
<CustomField>
    <fullName>Sym_Employee_active__c</fullName>
    <label>Employee active</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>