force-app/main/default/objects/Sym_Census__c/fields/Sym_Employee_total__c.field-meta.xml
<CustomField>
    <fullName>Sym_Employee_total__c</fullName>
    <label>Employee total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>