force-app/main/default/objects/Sym_Census__c/fields/Sym_employeeSpousePMPM__c.field-meta.xml
<CustomField>
    <fullName>Sym_employeeSpousePMPM__c</fullName>
    <label>Employee Spouse PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>