force-app/main/default/objects/Sym_Census__c/fields/Sym_familyPMPM__c.field-meta.xml
<CustomField>
    <fullName>Sym_familyPMPM__c</fullName>
    <label>Family PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>