force-app/main/default/objects/Sym_Census__c/fields/Sym_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Group_Name__c</fullName>
    <formula>Sym_Opportunity__r.Account.Name</formula>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>