force-app/main/default/objects/Sym_Census__c/fields/Sym_indvidualPMPM__c.field-meta.xml
<CustomField>
    <fullName>Sym_indvidualPMPM__c</fullName>
    <label>Individual PMPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>