force-app/main/default/objects/Sym_Census__c/fields/Sym_inputTier__c.field-meta.xml
<CustomField>
    <fullName>Sym_inputTier__c</fullName>
    <label>inputTier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>