force-app/main/default/objects/Sym_Census__c/fields/Sym_Number_below_20__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_below_20__c</fullName>
    <label>Number below 20</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>