force-app/main/default/objects/Sym_Census__c/fields/Sym_Number_Employee_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_Employee_Spouse__c</fullName>
    <label>Number Employee + Spouse</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>