force-app/main/default/objects/Sym_Census__c/fields/Sym_Number_of_individual_plans__c.field-meta.xml
<CustomField>
    <fullName>Sym_Number_of_individual_plans__c</fullName>
    <label>Number of individual plans</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>