force-app/main/default/objects/Sym_Census__c/fields/Sym_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sym_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XXX_Opportunity_DELETE</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Census</relationshipLabel>
    <relationshipName>Census</relationshipName>
    <type>Lookup</type>
</CustomField>