force-app/main/default/objects/Sym_Census__c/fields/Sym_outputTier__c.field-meta.xml
<CustomField>
    <fullName>Sym_outputTier__c</fullName>
    <label>outputTier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>