force-app/main/default/objects/Sym_Census__c/fields/Sym_participationRate__c.field-meta.xml
<CustomField>
    <fullName>Sym_participationRate__c</fullName>
    <label>participationRate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>