force-app/main/default/objects/Sym_Census__c/fields/Sym_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Sym_Percent_Complete__c</fullName>
    <description>Shows the percentage complete based on the number of fields input</description>
    <formula>(
MIN(1, BLANKVALUE(Sym_Employee_Cobra__c,0))+
MIN(1, BLANKVALUE(Sym_Employee_active__c,0))+
MIN(1, BLANKVALUE(Sym_Employee_retiree__c,0 ))+
MIN(1, BLANKVALUE(Sym_Employee_total__c,0 ))+
MIN(1, BLANKVALUE(Sym_Employee_with_dependents__c,0 ))+
MIN(1, BLANKVALUE( Sym_Number_Employee_Spouse__c ,0 ))+
MIN(1, BLANKVALUE(Sym_Number_below_20__c,0 ))+
MIN(1, BLANKVALUE(Sym_Number_Between_21_30__c,0 ))+
MIN(1, BLANKVALUE( Sym_Number_between_31_40__c,0 ))+
MIN(1, BLANKVALUE(Sym_Number_between_41_50__c,0 ))+
MIN(1, BLANKVALUE(Sym_Number_between_51_60__c,0 ))+
MIN(1, BLANKVALUE( Sym_Number_over_60__c,0 ))+
MIN(1, BLANKVALUE( Sym_Number_of_family_plans__c ,0 ))+
MIN(1, BLANKVALUE( Sym_Number_of_Female__c ,0 ))+
MIN(1, BLANKVALUE( Sym_Number_of_individual_plans__c ,0 ))+
MIN(1, BLANKVALUE( Sym_Number_of_Male__c ,0 ))

) 

/16</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>