force-app/main/default/objects/Sym_Census__c/fields/Sym_State__c.field-meta.xml
<CustomField>
    <fullName>Sym_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>