force-app/main/default/objects/Sym_Census__c/fields/Sym_Total_Average_Age__c.field-meta.xml
<CustomField>
    <fullName>Sym_Total_Average_Age__c</fullName>
    <label>Total Average Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>