force-app/main/default/objects/Sym_Census__c/fields/Sym_Total_Subscriber_Count_Org__c.field-meta.xml
<CustomField>
    <fullName>Sym_Total_Subscriber_Count_Org__c</fullName>
    <label>Total Subscriber Count Org</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>